class --> className, fix 404 page on mobile, add forecast information

--- a/client/src/Styles/App.scss
+++ b/client/src/Styles/App.scss
@@ -368,6 +368,15 @@ a {
     video {
         display: none;
     }
+    .error {
+        position: absolute;
+        transform: translate(-50%, -50%);
+        border: 1px solid lightgray;
+        height: 100vh;
+        width: 50vh;
+        display: grid;
+        place-items: center;
+    }
 }
 
 @media #{$extra-device} {
